solved merge mistakes